SERVER-56724 change tassert to uassert in $integral window function